PanelBuilder: minor code cleanup